# AI

./: 爬虫.py
Day001/python/: .gitignore  Augument_data.py
Day001/xmind/: 中心主题.xmind  数据处理.xmind
Day002/xmind/: C++语法.xmind  Python语法.xmind  git使用.xmind
Day003/python/: biaoliang.py  derivative.py  fitting.py  hanglieshi.py  jvzhen.py  jvzhencompute.py  jvzhenexample.py  math_numpy.py  math_torch.py  sigmoid.py  svd.py  xiangliang.py  xianxingceng_diy.py  xianxingceng_net.py  xuliegouzao.py  xuliegouzao_qvxian.py  zhangliang.py  zhangliangcompute.py  zuixiaoercheng.py
Day003/xmind/: 数学基础.xmind
Day004/C++/Opencv/: Adaptthreshold.cpp  CMakeLists.txt  Hough.cpp  area_and_other.cpp  boundary.cpp  contours_operation.cpp  create_mask.cpp  draw.cpp  edge.cpp  filter.cpp  geometric.cpp  gray_space.cpp  hist.cpp  matrix_compute.cpp  morphology.cpp  pic_bit_compute.cpp  pic_compute.cpp  read_img.cpp  read_video.cpp  threshold.cpp  warpAffine.cpp  warpPerspective.cpp
Day004/C++/Opencv/Opencv/: CMakeLists.txt
Day004/C++/Opencv/Opencv/Opencv/: CMakeLists.txt  Opencv.cpp  Opencv.h
Day004/python/: color_spcae.py  hsv.py  readvideo.py  创建蒙版图像.py  读取图像.py
Day004/xmind/: Opencv.xmind  PIL+Matplotlib.xmind
Day005/C++/: .gitignore
Day005/C++/deeplearn/: CMakeLists.txt  main.cpp
Day005/python/: minist.py  test.py
Day005/xmind/: 图神经网络.xmind  基本网络结构.xmind  评估指标.xmind
Day006/C++/: .gitignore
Day006/python/: .gitignore
Day006/xmind/: 深度学习.xmind
Day007/python/: .gitignore  mobilenetV2.py
Day007/xmind/: 工业相机.xmind  深度学习实际项目.xmind
Day008/python/: .gitignore  attention.py  distillation.py  diy_transformer.py  draw_lr_scheduler.py  draw_weight.py  dropout.py  init_weight.py  mobilenetv2_block.py  net.py  pnet.pt  prune.py  quantify.py  transformer.py
Day008/xmind/: 优化.xmind
Day009/python/: .gitignore
数学/: grad_down.py  grad_test.py  plot_test.py  torch_optim.py
(+300 files in other folders)
